--- a/requirements.txt
+++ b/requirements.txt
@@ -1,197 +1,23 @@
-absl-py==2.0.0
-aenum==3.1.15
-aiofiles
-aiohttp==3.9.4
-aiosignal==1.3.1
-aiosqlite
-annotated-types==0.6.0
-antlr4-python3-runtime==4.9.3
-anyio
-archspec
-argon2-cffi
-argon2-cffi-bindings
-asttokens
-astunparse==1.6.3
-async-timeout==4.0.3
-attrs
-av==11.0.0
-backcall
-bleach
-blinker==1.7.0
-boltons
-Brotli
-cachetools==5.3.2
-celluloid==0.2.0
-certifi==2023.11.17
-cffi
-chardet==5.2.0
-charset-normalizer==2.0.12
-click==8.1.7
-codetiming==1.4.0
-colorama
-comm
-contourpy==1.1.1
-cycler==0.12.1
-debugpy
-decorator
-deepface==0.0.79
-defusedxml
-Deprecated==1.2.14
-distro
-dlib
-easing-functions==1.0.4
-entrypoints
-executing
-facetorch==0.5.0
-fastdtw==0.3.4
-fastjsonschema
-filelock==3.13.1
-fire==0.5.0
-Flask==2.1.2
-flatbuffers==23.5.26
-fonttools==4.45.0
-frozenlist==1.4.1
-fsspec==2024.2.0
-future==1.0.0
-gast==0.4.0
-gdown==4.7.1
-google-auth==2.25.1
-google-auth-oauthlib==1.0.0
-google-pasta==0.2.0
-googleapis-common-protos==1.63.0
-grpcio==1.60.0
-gunicorn==21.2.0
-h5py==3.10.0
-hydra-core==1.3.2
-imageio==2.34.0
-imutils==0.5.4
+jupyter
+notebook
 ipykernel
 ipython
-ipython-autotime==0.3.2
-ipython-genutils
-ipywidgets
-itsdangerous==2.1.2
-jedi
-Jinja2
-joblib==1.3.2
-json5
-jsonpatch
-jsonpointer==2.1
-jsonschema
-jsonschema-specifications
-jupyter
-jupyter-console
-jupyter-events
-jupyter-server
-jupyter-ydoc
-jupyter_client
-jupyter_core
-jupyter_server_fileid
-jupyter_server_ydoc
-jupyterlab
-jupyterlab-pygments
-jupyterlab-widgets
-jupyterlab_server
-matplotlib==3.7.4
-matplotlib-inline
-mistune
-mpmath==1.3.0
-mtcnn==0.1.1
-multidict==6.0.5
-nbclassic
-nbclient
 nbconvert
 nbformat
-nest-asyncio
-networkx==3.1
-nibabel==5.2.1
-nilearn==0.10.3
-nltools==0.5.0
-notebook
-notebook_shim
-numexpr==2.8.4
-numpy==1.23.5
-oauthlib==3.2.2
-omegaconf==2.3.0
-opencv-python==4.8.1.78
-opt-einsum==3.3.0
-packaging
-pandas==2.0.3
-pandocfilters
-papermill==2.5.0
-parso
-pickleshare
-Pillow==10.1.0
-pkgutil_resolve_name
-platformdirs
-pluggy
-ply==3.11
-prometheus-client
-prompt-toolkit
-protobuf==4.25.1
-psutil
-pure-eval
-py-feat==0.6.1
-pyasn1==0.5.1
-pyasn1-modules==0.3.0
-pycosat
-pycparser
-Pygments
-pynv==0.3
-pyparsing==3.1.1
-PyQt5==5.15.10
-PyQt5-sip
-PySocks
-python-dateutil
-python-dotenv==1.0.1
-python-json-logger
-pytz
-PyYAML
-pyzmq
-qtconsole
-QtPy
-referencing
-requests==2.28.0
-requests-oauthlib==1.3.1
-retina-face==0.0.13
-rfc3339-validator
-rfc3986-validator
-rpds-py
-rsa==4.9
-ruamel.yaml
-ruamel.yaml.clib
-scikit-image==0.21.0
-scikit-learn==1.3.2
-scipy==1.10.1
-seaborn==0.13.2
-Send2Trash
-sip
-six
-sniffio
-soupsieve
-stack-data
-sympy==1.12
-tenacity==8.2.3
-termcolor==2.4.0
-terminado
-threadpoolctl==3.2.0
-tifffile==2023.7.10
-tinycss2
-tomli
-tornado
+jupyterlab
+numpy
+pandas
+matplotlib
+seaborn
+scipy
+scikit-learn
+scikit-image
+opencv-python
+dlib
+imutils
 tqdm
-traitlets
-tzdata==2023.3
-urllib3
-wcwidth
-webencodings
-websocket-client
-Werkzeug==3.0.1
-widgetsnbextension
-win-inet-pton
-xgboost==2.0.3
-y-py
-yarl==1.9.4
-ypy-websocket
-zipp
-zstandard==0.19.0
+ipywidgets
+Flask==2.1.2
+Pillow==10.1.0
+python-dotenv==1.0.1
+line-bot-sdk
