--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,24 @@
-Flask==2.2.2
-Werkzeug==2.2.2
-line-bot-sdk==2.3.0
-Pillow==9.2.0
-matplotlib==3.6.0
-python-dotenv==0.21.0
-dlib==19.24.0
-opencv-python==4.6.0.66
-imutils==0.5.4
-numpy==1.23.3
-pandas==1.5.0
-scikit-learn==1.1.2
+jupyter
+notebook
+ipykernel
+ipython
+nbconvert
+nbformat
+jupyterlab
+numpy
+pandas
+matplotlib
+seaborn
+scipy
+scikit-learn
+scikit-image
+opencv-python
+dlib
+imutils
+tqdm
+ipywidgets
+Flask==2.1.2
+Pillow==10.1.0
+python-dotenv==1.0.1
+line-bot-sdk
+gunicorn==20.1.0
