--- a/requirements.txt
+++ b/requirements.txt
@@ -17,8 +17,9 @@ dlib
 imutils
 tqdm
 ipywidgets
-Flask==2.1.2
+Flask>=2.2.2
+Werkzeug>=2.2.2
 Pillow==10.1.0
 python-dotenv==1.0.1
-line-bot-sdk
+line-bot-sdk==2.3.0
 gunicorn==20.1.0
